--- a/SukudoUI/MainWindow.xaml
+++ b/SukudoUI/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SukudoUI"
-        mc:Ignorable="d"
+        mc:Ignorable="d" ResizeMode="CanMinimize"
         Title="Sukudo" Height="800" Width="730">
     <StackPanel Margin="8">
+        <TextBlock HorizontalAlignment="Right" Text="(0, 8)       "/>
         <Grid x:Name="G_Game">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -28,7 +29,8 @@
             <GridSplitter Grid.Row="3" Grid.ColumnSpan="5" Height="3" HorizontalAlignment="Stretch" IsEnabled="False"/>
         </Grid>
         <WrapPanel>
-            
+            <Button Content="Start" x:Name="Btn_Start" Click="Btn_Start_Click"/>
+            <Button Content="Test" x:Name="Btn_Test" Click="Btn_Test_Click"/>
         </WrapPanel>
     </StackPanel>
 </Window>
