--- a/SukudoUI/App.xaml
+++ b/SukudoUI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="SukudoUI.App"
+﻿<Application x:Class="SudokuUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SukudoUI"
+             xmlns:local="clr-namespace:SudokuUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
