--- a/SudokuUI/MainWindow.xaml
+++ b/SudokuUI/MainWindow.xaml
@@ -30,6 +30,8 @@
         </Grid>
         <WrapPanel>
             <Button Content="Start" x:Name="Btn_Start" Click="Btn_Start_Click"/>
+            <Button Content="Solve" x:Name="Btn_Solve" ToolTip="One Click for all" Click="Btn_Solve_Click" IsEnabled="False"/>
+            <Button Content="Next Step" x:Name="Btn_Next" Click="Btn_Next_Click" IsEnabled="False"/>
             <Button Content="Reset" x:Name="Btn_Reset" Click="Btn_Reset_Click" Background="OrangeRed" IsEnabled="False"/>
             <Button Content="Clear" x:Name="Btn_Clear" Click="Btn_Clear_Click" Background="OrangeRed"/>
         </WrapPanel>
