--- a/SudokuUI/MainWindow.xaml
+++ b/SudokuUI/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SudokuUI"
         mc:Ignorable="d" ResizeMode="CanMinimize"
+        xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="Sudoku" Height="840" Width="730">
     <StackPanel Margin="8">
         <Grid x:Name="G_Game">
@@ -31,12 +32,23 @@
             <Button Content="Read From File" x:Name="Btn_Read" Click="Btn_Read_Click"/>
             <Button Content="Write To File" x:Name="Btn_Write" Click="Btn_Write_Click"/>
         </WrapPanel>
-        <WrapPanel>
-            <Button Content="Start" x:Name="Btn_Start" Click="Btn_Start_Click"/>
-            <Button Content="Solve" x:Name="Btn_Solve" ToolTip="One Click for all" Click="Btn_Solve_Click" IsEnabled="False"/>
-            <Button Content="Next Step" x:Name="Btn_Next" Click="Btn_Next_Click" IsEnabled="False"/>
-            <Button Content="Reset" x:Name="Btn_Reset" Click="Btn_Reset_Click" Background="OrangeRed" IsEnabled="False"/>
-            <Button Content="Clear" x:Name="Btn_Clear" Click="Btn_Clear_Click" Background="OrangeRed"/>
-        </WrapPanel>
+        <DockPanel LastChildFill="False">
+            <WrapPanel>
+                <Button Content="Start" x:Name="Btn_Start" Click="Btn_Start_Click"/>
+                <Button Content="Solve" x:Name="Btn_Solve" ToolTip="One Click for all" Click="Btn_Solve_Click" IsEnabled="False"/>
+                <Button Content="Next Step" x:Name="Btn_Next" Click="Btn_Next_Click" IsEnabled="False"/>
+                <Button Content="Reset" x:Name="Btn_Reset" Click="Btn_Reset_Click" Background="OrangeRed" IsEnabled="False"/>
+                <Button Content="Clear" x:Name="Btn_Clear" Click="Btn_Clear_Click" Background="OrangeRed"/>
+            </WrapPanel>
+            <StackPanel Orientation="Horizontal" DockPanel.Dock="Right">
+                <Button x:Name="Btn_Previous" Click="Btn_Previous_Click" ToolTip="Previous Answer" IsEnabled="False">
+                    <md:PackIcon Kind="ArrowBack"/>
+                </Button>
+                <Button x:Name="Btn_Forward" Click="Btn_Forward_Click" IsEnabled="False" ToolTip="Next Answer">
+                    <md:PackIcon Kind="ArrowForward"/>
+                </Button>
+            </StackPanel>
+        </DockPanel>
+        
     </StackPanel>
 </Window>
